# EnBot

./: main.py  musiccog.py  pyproject.toml
cogs/: musiccog.py
