[tool.poetry]
name = "repl_python3_beta_EnBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
python-dotenv = "^0.19.0"
youtube_dl = "^2021.6.6"
ffmpeg = "^1.4"
PyNaCl = "^1.4.0"
Cogs = "^0.4.4"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
